
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;


 int B3 ;
 int B7 ;
 scalar_t__ IS_LED_ON (int ,int ) ;
 int USB_LED_CAPS_LOCK ;
 int USB_LED_SCROLL_LOCK ;
 int led_set_user (int ) ;
 int writePinHigh (int ) ;
 int writePinLow (int ) ;

void led_set_kb(uint8_t usb_led) {
  if (IS_LED_ON(usb_led, USB_LED_CAPS_LOCK)) {

    writePinLow(B3);
  } else {

    writePinHigh(B3);
  }
  if (IS_LED_ON(usb_led, USB_LED_SCROLL_LOCK)) {

    writePinLow(B7);
  } else {

    writePinHigh(B7);
  }
      led_set_user(usb_led);
}
